welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:64: error: Unmatched closing brace '}' ignored here
}
^